// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compile functions replaceModuleImport 1`] = `
"
      import $utils from './utils'
      var fetch = $app_require$('@app-module/system.fetch')
      var prompt = $app_require$('@app-module/system.prompt')
    "
`;

exports[`compile functions replaceModuleImport 2`] = `
"
      import $utils from './utils'
      var system = $app_require$('@app-module/system')
    "
`;

exports[`compile functions replaceModuleImport 3`] = `
"
      const fetch = $app_require$('@app-module/system.fetch')
      const prompt = $app_require$(\\"@app-module/system.prompt\\")
    "
`;

exports[`compile functions replaceModuleImport 4`] = `
"
      const fetch = $app_require$('@app-module/system.fetch')
      const system = $app_require$(\\"@app-module/system\\")
    "
`;

exports[`轻卡 lifecycle params 编译 postHandleLiteCardRes 将 lifecycle params 中的 {{ expr }} 编译为 #/$ AST 1`] = `
Object {
  "#deviceType": Array [
    ".",
    Array [
      ".",
      Array [
        "$",
        "system",
      ],
      "device",
    ],
    "DEVICE_TYPE",
  ],
  "#lat": Array [
    ".",
    Array [
      "()",
      Array [
        ".",
        Array [
          ".",
          Array [
            "$",
            "system",
          ],
          "geolocation",
        ],
        "getLocation",
      ],
      Array [
        "{}",
        Object {
          "coordType": "gcj02",
        },
      ],
    ],
    "latitude",
  ],
  "$deviceType": "system.device.DEVICE_TYPE",
  "$lat": "{{ system.geolocation.getLocation({coordType:'gcj02'}).latitude }}",
  "staticVal": "plain-string",
}
`;
